END: margin fix and border collapse(or border spacing)

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 
 #logo {
     width: 20%;
-    margin-top: 150px;
+    margin-top: 10vh;
 }
 
 ul {
@@ -31,6 +31,7 @@ ul {
 
 table {
     border-spacing: 0;
+    border-collapse: collapse;
 }
 
 th {
